<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/connection_screen_layout"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:gravity="center_horizontal"
    android:layout_height="fill_parent">

    <include
        layout="@layout/connectivity_type_radio_primary"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/ipAddressText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ip_address"
            android:textSize="20.0sp"
            android:layout_weight="1" />
        <EditText
            android:id="@+id/ipAddressInput"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions|text"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/portText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20.0sp"
            android:text="@string/port"
            android:layout_weight="1" />
        <EditText
            android:id="@+id/portInput"
            android:text="@string/_9100"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:maxLength="5"
            android:inputType="number"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/macAddressText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20.0sp"
            android:text="@string/mac_address"
            android:layout_weight="1" />
        <EditText
            android:id="@+id/macInput"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="textNoSuggestions|text"
            android:layout_weight="1" />
    </LinearLayout>

    <Button
        android:id="@+id/testButton"
        android:text="@string/camera"
        android:visibility="gone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/galleryButton"
        android:text="@string/gallery"
        android:visibility="gone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/printButton"
        android:text="@string/camera"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" />



    <CheckBox
        android:id="@+id/checkBox"
        android:text="@string/check_to_store_on_printer"
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/printerStorePath"
        android:layout_height="wrap_content"
        android:hint="@string/path_to_store_on_printer"
        android:layout_width="fill_parent"
        android:inputType="textNoSuggestions|text"
        android:visibility="gone" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter" />

</LinearLayout>
