<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none">
    <RadioGroup
        android:id="@+id/radioGroup23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/ipDnsRadio"
            android:text="@string/ip_dns"
         />
        <RadioButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/bluetoothRadio"
            android:text="@string/bluetooth_r" />
        <RadioButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:checked="true"
            android:id="@+id/bleRadio"
            android:text="@string/ble" />
    </RadioGroup>
</HorizontalScrollView>