<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:gravity="center_horizontal"
    android:layout_height="fill_parent">

    <TextView
        android:id="@+id/statusText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Status: Not Connected"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:background="@color/Red"
        android:textSize="20.0sp" />

    <include
        layout="@layout/connectivity_type_radio_primary"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/ipAddressText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ip_address"
            android:textSize="20.0sp"
            android:layout_weight="1" />
        <EditText
            android:id="@+id/ipAddressInput"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions|text"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/portText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20.0sp"
            android:text="@string/port"
            android:layout_weight="1" />
        <EditText
            android:id="@+id/portInput"
            android:text="@string/_9100"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:maxLength="5"
            android:inputType="number"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/macAddressText"
            android:layout_width="fill_parent"
            android:textSize="20.0sp"
            android:layout_height="wrap_content"
            android:text="@string/mac_address"
            android:layout_weight="1" />
        <EditText
            android:id="@+id/macInput"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="textNoSuggestions|text"
            android:layout_weight="1" />
    </LinearLayout>

    <EditText
        android:id="@+id/userInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter text to print"
        android:inputType="text" />


    <Button
        android:id="@+id/testButton"
        android:text="@string/test"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" />

</LinearLayout>
